--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -7,12 +7,8 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-
-## R Markdown
-
-###Loading and preprocessing the data
-The zip file containing the data for this analysis is available for download from [here]. Since this data set is realativly small it can be
-downloaded to a temp file and read in direcctly
+## Loading and preprocessing the data
+The zip file containing the data for this analysis is available for download from [here]. Since this data set is realativly small it can be downloaded to a temp file and read in direcctly.
 
 ```{r get data}
 temp<-tempfile()
@@ -23,30 +19,36 @@ activitydata$date<-as.Date(activitydata$date)
 str(activitydata)
 ```
 
-###What is mean total number of steps taken per day?
+## What is mean total number of steps taken per day?
+
+To get the totals, I summarized the data using the plyr package and ploted the histogram using the based plotting package.
 ```{r total steps per day}
 library(plyr)
 stepsByDay<-ddply(activitydata,.(date),summarize,total=sum(steps))
 with(stepsByDay,hist(total, breaks = 15))
 ```
 
-Then we can look at the summary stats
+The mean and the median steps per day are:
 ```{r}
 with(stepsByDay,mean(total,na.rm=TRUE))
 with(stepsByDay,median(total,,na.rm=TRUE))
 ```
 
-###What is the average daily activity pattern?
+## What is the average daily activity pattern?
+
+It should not surpring but activity is not spaced out equally throughout the day.
 ```{r}
 stepsbyInt<-ddply(activitydata,.(interval),summarize,avgSteps=mean(steps,na.rm=TRUE))
 with(stepsbyInt,plot(interval,avgSteps,type="l"))
 abline(v=stepsbyInt[stepsbyInt$avgSteps==max(stepsbyInt$avgSteps),1],lwd=2,col="red")
+```
 
-
+The most activity occurs at:
+```{r}
 stepsbyInt[stepsbyInt$avgSteps==max(stepsbyInt$avgSteps),1]
 ```
 
-###Imputing missing values
+## Imputing missing values
 Browsing through the data it becomes clear that there are entire days and many intervals where values are missing.  Lets take a look at just how many there are
 
 ```{r}
@@ -76,9 +78,9 @@ with(stepsByDay1,median(total,,na.rm=TRUE))
 
 The values of the mean and the median for fullActvity are not very different than they were when we excluded the missing values. Replacing missing values with the average for each interval did not have a large impact on the distrbution or the mean or median.
 
-###Are there differences in activity patterns between weekdays and weekends?
-```{r}
+## Are there differences in activity patterns between weekdays and weekends?
 
+```{r}
 fullActivity$weekend<-weekdays.Date(fullActivity$date)%in%c("Saturday","Sunday")
 fullActivity$dayType<-as.factor(ifelse(fullActivity$weekend==TRUE,"Weekend","Weekdays"))
 
@@ -87,6 +89,6 @@ stepsByInt1<-ddply(fullActivity,.(interval,dayType),summarize,total=sum(steps))
 library(lattice)
 xyplot(total~interval|dayType,type="l", data=stepsByInt1, layout=c(1,2))
 ```
-
+Yes there is much more activity on the weekdays.
 
 [here]:<"https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip">
